Changed products from a list to a hashmap